--- a/Codigo/Pagina.html
+++ b/Codigo/Pagina.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página con footer en la parte superior</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="PaginaC.css">
 </head>
 <body>
     <footer>
-        <p>Este es el footer</p>
+        <p>Inicio | Iniciar Sesión | Registrarse | Cargar Notas</p>
     </footer>
 
     <div class="contenedor">
         <div class="rectangulo rojo">
-            <p>Sección roja</p>
+            <div class="cuadrado ver-notas">
+                <p>Ver notas</p>
+            </div>
+            <div class="cuadrado boletin">
+                <p>Boletín</p>
+            </div>
         </div>
         <div class="rectangulo negro">
-            <p>Sección negra</p>
+            <div class="cuadrado inferior">
+                <p>Desempeño</p>
+            </div>
         </div>
     </div>
 </body>
