--- a/Codigo/Index.html
+++ b/Codigo/Index.html
@@ -4,25 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="PaginaC.css">
+    <link rel="stylesheet" href="CSS/PaginaC.css">
 </head>
 <body>
     <footer>
-        <p>Inicio | Iniciar Sesión | Registrarse | Cargar Notas</p>
+        <p><a href="Index.html">Inicio</a> | <a href="InicioSesion.html">Iniciar Sesión</a> | <a href="cargarnotas.html">Cargar Notas</a></p>
     </footer>
 
     <div class="contenedor">
         <div class="rectangulo rojo">
             <div class="cuadrado ver-notas">
-                <p>Ver notas</p>
+                <p><a href="cargarnotas.html">Cargar Notas</a></p>
             </div>
             <div class="cuadrado boletin">
-                <p>Boletín</p>
-            </div>
-        </div>
-        <div class="rectangulo negro">
-            <div class="cuadrado inferior">
-                <p>Desempeño</p>
+                <p><a href="vernotas.html">Boletín</a></p>
             </div>
         </div>
     </div>
