--- a/html/html/vernotas.html
+++ b/html/html/vernotas.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notas Escolares</title>
-    <link rel="stylesheet" href="../CSS/cano.css">
+    <link rel="stylesheet" href="../CSS/vernotas.css">
 </head>
 <body>
     <header>
         <a href="sesion.html"><img src="../imagen/logo.png" alt="Logo de la escuela" class="logo"></a>
-        <h1>Colegio Dr. Ernesto Guevara</h1>
+        <h1>Colegio Dr. Ernesto Guevara <br> <span id="userNameDisplay"></span> </h1>
+        <br>
     </header>
 
     <main>
@@ -42,6 +43,6 @@
         </div>
     </main>
     
-    <script src="../js/cano.js"></script>
+    <script src="../js/vernotas.js"></script>
 </body>
 </html>
