--- a/html/html/sesionusuario.html
+++ b/html/html/sesionusuario.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="../CSS/sesionusuario.css">
+    <script src="../js/sesionusuario.js" defer></script>
 </head>
 <body>
     <footer>
-        <p><a href="sesionusuario.html">Inicio</a> | <a href="../index.html">Cerrar Sesión</a></p>
-    </footer>
+        <h2>Bienvenido, <span id="userNameDisplay"></span></h2>
+        <br>
+        <p><a href="sesionusuario.html">Inicio</a> | <a href="../index.html">Cerrar Sesión </a></p>
+    </footer>   
 
     <div class="contenedor">
         <div class="rectangulo rojo">
